--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,15 @@ html,
 
 .App {
   text-align: center;
-  height: 100%;
+  width:100%;
+  height: 117%;
+  background-color: hsla(243, 27%, 15%, 0.614);
+  background-size: 100%;
+  flex-direction: column;
+  display:flex;
+  font-size:larger;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(2, 0, 0);
 }
 
 .App-logo {
